desafio seo completado

--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!--Bootstrap-->
+
+    <!--SEO-->
+    <meta name="descrition" content="Construimos tu piscina y te brindamos el servicio de mantenimiento necesario para que siempre este en su estado optimo. Trabajamos con los mejores materiales del mercado y especialistas de excelencia.">
+    <meta name=" keywords" content="piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion">
+    <meta property="og:title"content="Paradise Pools Piscinas">
+    <meta property="og:description"content="Construccion y Mantenimiento de Piscinas">
+
+
+
+     <!--Bootstrap-->
   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
@@ -15,15 +23,15 @@
     <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
 
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     
 
-    <title>Paradise Pools - Servicios</title>
+    <title>SERVICIOS - Paradise Pools - Construimos la Piscina de tus sueños!</title>
 </head>
 <body>
   <header class="header-cont">
     <div class="logo-header">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Piscina"></div>
+      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools piscina"></div>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -63,13 +71,13 @@
        </div>
       <div class="carousel-inner">
          <div class="carousel-item active">
-           <img src="multimedia/imagenes/construcción-de-piscinados.jpg" class="d-block w-100" alt="Contruccion de Piscina">
+           <img src="multimedia/imagenes/construcción-de-piscinados.jpg" class="d-block w-100" alt="contruccion de piscinas">
         </div>
         <div class="carousel-item">
-          <img src="multimedia/imagenes/mantenimiento2.jpg" class="d-block w-100" alt="Mantenimiento de Piscina">
+          <img src="multimedia/imagenes/mantenimiento2.jpg" class="d-block w-100" alt="mantenimiento de piscinas">
         </div>
         <div class="carousel-item">
-          <img src="multimedia/imagenes/servicios12.png" class="d-block w-100" alt="Decoracion de Piscina">
+          <img src="multimedia/imagenes/servicios12.png" class="d-block w-100" alt="decoracion de piscina">
         </div>
      </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -89,17 +97,17 @@
       <!--lado izquierdo-->
    <div class="rrss-cont">
      <ul class="rrss">
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="instagram"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="logo instagram"/></a>
        </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="facebook"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="logo facebook"/></a>
        </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="whatsapp"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"/></a>
        </li>
      </ul>
    </div>
    <!--en el centro-->
    <div class="logo-footer">
-     <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Logo"/>
+     <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools logo"/>
    </div>
    <!--lado derecho-->
    <div class="derechos">
