--- a/nosotros.html
+++ b/nosotros.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--SEO-->
+    <meta name="descrition" content="Hace mas de 20 años nos dedicamos a construir piscinas soñadas! Te brindamos todos los servicios de diseño, construccion y mantenimiento que tu pileta necesita.">
+    <meta name=" keywords" content="arquitectos, constructores, piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion, descanso">
+    <meta property="og:title"content="Paradise Pools Piscinas">
+    <meta property="og:description"content="Hace mas de 20 años construimos piscinas soñadas!">
+
     <!--font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +21,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
     <!--CSS-->
-    <link rel="stylesheet" href="style.css">
-    <!--Font-->
+    <link rel="stylesheet" href="./css/style.css">
+    
 
-    <title>Paradise Pools - Nosotros</title>
+    <title>NOSOTROS - Paradise Pools - Construimos la Piscina de tus sueños!</title>
 </head>
 <body>
   <header class="header-cont">
     <div class="logo-header">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Piscina"></div>
+      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools piscinas"></div>
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -60,13 +67,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="multimedia/imagenes/oficina2.jpeg" class="d-block w-100" alt="Showroom">
+                <img src="multimedia/imagenes/oficina2.jpeg" class="d-block w-100" alt="showroom">
               </div>
               <div class="carousel-item">
-                <img src="multimedia/imagenes/exterior.jpg" class="d-block w-100" alt="Local Comercial">
+                <img src="multimedia/imagenes/exterior.jpg" class="d-block w-100" alt="local comercial">
               </div>
               <div class="carousel-item">
-                <img src="multimedia/imagenes/transformacion-del-vendedor.jpg" class="d-block w-100" alt="Asesoramiento">
+                <img src="multimedia/imagenes/transformacion-del-vendedor.jpg" class="d-block w-100" alt="asesoramiento">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -84,17 +91,17 @@
       <!--lado izquierdo-->
    <div class="rrss-cont">
      <ul class="rrss">
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="instagram"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="logo instagram"/></a>
        </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="facebook"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="logo facebook"/></a>
        </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="whatsapp"/></a>
+       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"/></a>
        </li>
      </ul>
    </div>
    <!--en el centro-->
    <div class="logo-footer">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Logo"/>
+      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools logo"/>
    </div>
    <!--lado derecho-->
    <div class="derechos">
