seo y sass finalizado

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--SEO-->
-    <meta name="descrition" content="Construccion y mantenimiento de piscinas, diseño de piletas para hogares, hoteles, clubes y complejos. Soluciones a problemas quimicos con el agua de tu piscina.">
+    <meta name="descrition" content="Construccion y mantenimiento de piscinas, diseño de piletas para hogares, casas, hoteles, clubes y complejos. Soluciones a problemas quimicos con el agua de tu piscina.">
     <meta name=" keywords" content="empresa constructora, construccion de piscinas, mantenimiento de piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion">
     <meta property="og:title"content="Paradise Pools Piscinas">
     <meta property="og:description"content="Construimos la piscina de tus sueños!">
