--- a/contacto.html
+++ b/contacto.html
@@ -51,7 +51,8 @@
         </header>
     <section class="contacto-cont">
         <h1>Contactate con nosotros!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eligendi molestias possimus itaque tempora nam veniam molestiae libero sequi. Adipisci necessitatibus eveniet excepturi iure odit minus autem quos labore harum.</p>
+        <p>Pone en marcha tu proyecto, contactate con nosotros y hace realidad tu piscina! <br>
+        Podes acercarte a nuestro local, llamarnos o completar el formulario con tus datos y nos ponemos en contacto con vos para brindarte toda la info que necesites! </p>
 
         <!--ACCORDION BOOTSTRAP-->
         <div class="accordion accordion-flush" id="accordionFlushExample">
