--- a/index.html
+++ b/index.html
@@ -48,19 +48,24 @@
     </nav>
   </header>
     
-  <section class="banner-index">
+  <!-- <section class="banner-index">
       <img src="multimedia/imagenes/banner-logo2.png" alt="fondo de piscina">
-  </section>
+  </section> -->
 
   <section class="sumergite-cont">
     <h1>¡Sumergite en buenos momentos!</h1>
-    <h4>Nosotros diseñamos la piscina de tus sueños</h4>
+    <h4>Construimos la piscina de tus sueños</h4>
   </section>
-  <section class="menu-main">
+  <section class="container">
+    <div class="row g-4">
         <!--imagenes que nos dirigen a ciertas secciones del sitio-->
-    <a href="nosotros.html"><img src="multimedia/imagenes/Nosotros.png" alt="Nosotros"/></a>
-    <a href="servicios.html"><img src="multimedia/imagenes/servicios.png" alt="Servicios"/></a>
-    <a href="trabajos.html"><img src="multimedia/imagenes/rabajosrealizados.png"alt="Trabajos Realizados"/></a>
+      <a href="nosotros.html" class="col-lg-4 col-md-6 col-sm-12 menu-main">
+        <img src="multimedia/imagenes/Nosotros.png" alt="Nosotros" class="img-fluid rounded"/></a>
+      <a href="servicios.html" class="col-lg-4 col-md-6 col-sm-12 menu-main">
+        <img src="multimedia/imagenes/servicios.png" alt="Servicios" class="img-fluid rounded"/></a>
+      <a href="trabajos.html" class="col-lg-4 col-md-6 col-sm-12 menu-main">
+        <img src="multimedia/imagenes/rabajosrealizados.png"alt="Trabajos Realizados" class="img-fluid rounded"/></a>
+    </div>
   </section>
 
   <section class="iframe-cont"> 
