--- a/nosotros.html
+++ b/nosotros.html
@@ -52,9 +52,10 @@
 
   <section class="nosotros-cont">
       <h1>Paradise Pools</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dignissimos corporis esse sapiente nisi maxime sunt a laudantium molestias, aliquam laboriosam quia expedita quam eaque veniam velit eligendi ipsa explicabo.
-        Impedit, consequatur eveniet omnis minus vel, quasi molestiae ratione vitae odio rem cupiditate quaerat sint eos tempora. Numquam tempore, nemo, dolorem hic fugiat at, quis beatae dolores sunt dolore magni!
-        Reprehenderit velit vero molestiae, nostrum consectetur neque est modi cupiditate blanditiis facilis maxime deserunt obcaecati voluptates perferendis maiores, ut magnam sint beatae! Sint esse numquam cumque quidem ut unde quaerat?</p>
+      <p>Hace mas de 20 años que nos dedicamos al diseño, construccion y mantenimiento de piscinas. Somos referentes en el rubro en la ciudad de Santa Fe y la región. <BR>
+      Contamos con un equipo de recursos humanos altamente capacitado y especializado y maquinaria de ultima tecnología. <br> 
+       Trabajamos con materiales de primera calidad asegurandote que tu piscina va a ser como siempre la soñaste!
+      </p>
   </section>
 
   <section class="d-flex justify-content-center">
