--- a/redessociales.html
+++ b/redessociales.html
@@ -7,6 +7,8 @@
     <title>Redes Sociales</title>
 </head>
 <body>
-    <p>Se dirige a las redes sociales de la empresa.</p>
+    <p>Se dirigiria a las redes sociales de la empresa.
+        La empresa es ficticia y no posee redes ni número de whatsapp.
+    </p>
 </body>
 </html>
