--- a/servicios.html
+++ b/servicios.html
@@ -53,12 +53,11 @@
 
   <section class="servicios-cont">
       <h1>Nuestros Servicios</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, ipsum tempora. Magnam, nesciunt minima officia velit ad repellendus aspernatur, fuga voluptate, accusamus perspiciatis dolore molestias odit laborum facere dolores ipsum!
-        Vel dolores, minus omnis laborum consequuntur distinctio aliquid eligendi repellat et iure veritatis commodi quod facilis excepturi assumenda repellendus placeat. Voluptatum blanditiis nihil laudantium sint quam explicabo quod quasi culpa?</p>
+      <p>Contratando a Paradise Pools te podes relajar! <br> Nos encargamos de todo para que vos y tu familia solo tengan que disfrutar de su nueva piscina!</p>
       <ul class="servicios-list">
-        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
-        <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</li>
+        <li>- Nos encargamos de diseñar</li>
+        <li>- Construimos por completo</li>
+        <li>- Te brindamos el servicio de mantemiento</li>
       </ul>
   </section>
   <section class="d-flex justify-content-center">
