--- a/trabajos.html
+++ b/trabajos.html
@@ -49,11 +49,11 @@
     </header>
     <section class="trabajos-cont">
         <h1>Trabajos Realizados</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisici ng elit. Cum, ipsum tempora. Magnam, nesciunt minima officia velit ad repellendus aspernatur, fuga voluptate, accusamus perspiciatis dolore molestias odit laborum facere dolores ipsum!
-        Vel dolores, minus omnis laborum consequuntur distinctio aliquid eligendi repellat et iure veritatis commodi quod facilis excepturi assumenda repellendus placeat. Voluptatum blanditiis nihil laudantium sint quam explicabo quod quasi culpa?</p>
+        <p>Existen muchos estilos de piscinas. En Paradise Pools hacemos realidad el diseño que quieras! <br>
+        Te mostramos algunos de nuestros trabajos realizados recientemente.</p>
     </section>
-    <section class="d-flex justify-content-center" > <!--carousel con imagenes de trabajos realizados - bootstrap-->
-            <div id="carouselExampleIndicators" class="carousel slide w-75 " data-bs-ride="true">
+    <!-- <section class="d-flex justify-content-center" > --> <!--carousel con imagenes de trabajos realizados - bootstrap-->
+            <!-- <div id="carouselExampleIndicators" class="carousel slide w-75 " data-bs-ride="true">
             <div class="carousel-indicators carousel-edit">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -79,7 +79,21 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+    </section> -->
+
+    <section class="trabajosimg-cont">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado1.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado2.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado3.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado4.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado5.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado6.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado7.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado8.jpg" alt="piscina">
+      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado9.jpg" alt="piscina">
     </section>
+
+
 
     <footer class="footer-cont">
       <!--lado izquierdo-->
