proyecto final listo

--- a/contacto.html
+++ b/contacto.html
@@ -27,29 +27,32 @@
 
     <title>CONTACTO - Paradise Pools - Construimos la Piscina de tus sueños!</title>
 </head>
+
 <body>
     <header class="header-cont">
-        <div class="logo-header">
-          <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Piscina"></div>
-          <nav class="navbar navbar-expand-lg bg-white">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link" href="index.html">Inicio</a>
-                  <a class="nav-link" href="contacto.html">Contacto</a>
-                  <a class="nav-link" href="nosotros.html">Nosotros</a>
-                  <a class="nav-link" href="servicios.html">Servicios</a>
-                  <a class="nav-link" href="trabajos.html">Trabajos</a>
-                  <a class="nav-link disabled"></a>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </header>
-    <section class="contacto-cont">
+      <div class="logo-header">
+        <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="Paradise Pools Piscina">
+      </div>
+        <nav class="navbar navbar-expand-lg bg-white">
+         <div class="container-fluid">
+           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+             <div class="navbar-nav">
+                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="contacto.html">Contacto</a>
+                <a class="nav-link" href="nosotros.html">Nosotros</a>
+                <a class="nav-link" href="servicios.html">Servicios</a>
+                <a class="nav-link" href="trabajos.html">Trabajos</a>
+                <a class="nav-link disabled"></a>
+             </div>
+           </div>
+         </div>
+       </nav>
+     </header>
+
+     <section class="contacto-cont">
         <h1>Contactate con nosotros!</h1>
         <p>Pone en marcha tu proyecto, contactate con nosotros y hace realidad tu piscina! <br>
         Podes acercarte a nuestro local, llamarnos o completar el formulario con tus datos y nos ponemos en contacto con vos para brindarte toda la info que necesites! </p>
@@ -149,6 +152,7 @@
         <p>Todos los derechos reservados</p>
       </div>
   </footer>
+  
  <!-- JavaScript Bundle with Popper -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
