--- a/nosotros.html
+++ b/nosotros.html
@@ -1,117 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--SEO-->
-    <meta name="descrition" content="Hace mas de 20 años nos dedicamos a construir piscinas soñadas! Te brindamos todos los servicios de diseño, construccion y mantenimiento que tu pileta necesita.">
-    <meta name=" keywords" content="arquitectos, constructores, piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion, descanso">
-    <meta property="og:title"content="Paradise Pools Piscinas">
-    <meta property="og:description"content="Hace mas de 20 años construimos piscinas soñadas!">
+    <meta
+      name="descrition"
+      content="Hace mas de 20 años nos dedicamos a construir piscinas soñadas! Te brindamos todos los servicios de diseño, construccion y mantenimiento que tu pileta necesita."
+    />
+    <meta
+      name=" keywords"
+      content="arquitectos, constructores, piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion, descanso"
+    />
+    <meta property="og:title" content="Paradise Pools Piscinas" />
+    <meta
+      property="og:description"
+      content="Hace mas de 20 años construimos piscinas soñadas!"
+    />
 
     <!--font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
+      rel="stylesheet"
+    />
+
     <!--Bootstrap-->
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./css/style.css">
-    
+    <link rel="stylesheet" href="./css/style.css" />
 
-    <title>NOSOTROS - Paradise Pools - Construimos la Piscina de tus sueños!</title>
-</head>
-<body>
-  <header class="header-cont">
-    <div class="logo-header">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools piscinas"></div>
-    <nav class="navbar navbar-expand-lg bg-white">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Inicio</a>
-            <a class="nav-link" href="contacto.html">Contacto</a>
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-            <a class="nav-link" href="servicios.html">Servicios</a>
-            <a class="nav-link" href="trabajos.html">Trabajos</a>
-            <a class="nav-link disabled"></a>
+    <title>
+      NOSOTROS - Paradise Pools - Construimos la Piscina de tus sueños!
+    </title>
+  </head>
+
+  <body>
+    <header class="header-cont">
+      <div class="logo-header">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools piscinas"
+        />
+      </div>
+      <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link" href="trabajos.html">Trabajos</a>
+              <a class="nav-link disabled"></a>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
- </header>
+      </nav>
+    </header>
 
-
-  <section class="nosotros-cont">
+    <section class="nosotros-cont">
       <h1>Paradise Pools</h1>
-      <p>Hace mas de 20 años que nos dedicamos al diseño, construccion y mantenimiento de piscinas. Somos referentes en el rubro en la ciudad de Santa Fe y la región. <BR>
-      Contamos con un equipo de recursos humanos altamente capacitado y especializado y maquinaria de ultima tecnología. <br> 
-       Trabajamos con materiales de primera calidad asegurandote que tu piscina va a ser como siempre la soñaste!
+      <p>
+        Hace mas de 20 años que nos dedicamos al diseño, construccion y
+        mantenimiento de piscinas. Somos referentes en el rubro en la ciudad de
+        Santa Fe y la región. <br />
+        Contamos con un equipo de recursos humanos altamente capacitado y
+        especializado y maquinaria de ultima tecnología. <br />
+        Trabajamos con materiales de primera calidad asegurandote que tu piscina
+        va a ser como siempre la soñaste!
       </p>
-  </section>
+    </section>
 
-  <section class="d-flex justify-content-center">
-        <!--carousel de fotos del local - Bootstrap-->
-        <div id="carouselExampleIndicators" class="carousel slide w-75" data-bs-ride="true">
-            <div class="carousel-indicators carousel-edit">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="multimedia/imagenes/oficina2.jpeg" class="d-block w-100" alt="showroom">
-              </div>
-              <div class="carousel-item">
-                <img src="multimedia/imagenes/exterior.jpg" class="d-block w-100" alt="local comercial">
-              </div>
-              <div class="carousel-item">
-                <img src="multimedia/imagenes/transformacion-del-vendedor.jpg" class="d-block w-100" alt="asesoramiento">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+    <section class="d-flex justify-content-center">
+      <!--carousel de fotos del local - Bootstrap-->
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide w-75"
+        data-bs-ride="true"
+      >
+        <div class="carousel-indicators carousel-edit">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="multimedia/imagenes/oficina2.jpeg"
+              class="d-block w-100"
+              alt="showroom"
+            />
           </div>
-  </section>
+          <div class="carousel-item">
+            <img
+              src="multimedia/imagenes/exterior.jpg"
+              class="d-block w-100"
+              alt="local comercial"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="multimedia/imagenes/transformacion-del-vendedor.jpg"
+              class="d-block w-100"
+              alt="asesoramiento"
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
 
-  <footer class="footer-cont">
+    <footer class="footer-cont">
       <!--lado izquierdo-->
-   <div class="rrss-cont">
-     <ul class="rrss">
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="logo instagram"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="logo facebook"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"/></a>
-       </li>
-     </ul>
-   </div>
-   <!--en el centro-->
-   <div class="logo-footer">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools logo"/>
-   </div>
-   <!--lado derecho-->
-   <div class="derechos">
-     <p>Todos los derechos reservados</p>
-   </div>
- </footer>
+      <div class="rrss-cont">
+        <ul class="rrss">
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/Instagram-logo.png"
+                alt="logo instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/facebook-logo.png"
+                alt="logo facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <!--en el centro-->
+      <div class="logo-footer">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools logo"
+        />
+      </div>
+      <!--lado derecho-->
+      <div class="derechos">
+        <p>Todos los derechos reservados</p>
+      </div>
+    </footer>
 
-
-   <!-- JavaScript Bundle with Popper -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>  
-</body>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
