--- a/servicios.html
+++ b/servicios.html
@@ -1,120 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--SEO-->
-    <meta name="descrition" content="Construimos tu piscina y te brindamos el servicio de mantenimiento necesario para que siempre este en su estado optimo. Trabajamos con los mejores materiales del mercado y especialistas de excelencia.">
-    <meta name=" keywords" content="piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion">
-    <meta property="og:title"content="Paradise Pools Piscinas">
-    <meta property="og:description"content="Construccion y Mantenimiento de Piscinas">
+    <meta
+      name="descrition"
+      content="Construimos tu piscina y te brindamos el servicio de mantenimiento necesario para que siempre este en su estado optimo. Trabajamos con los mejores materiales del mercado y especialistas de excelencia."
+    />
+    <meta
+      name=" keywords"
+      content="piscinas, piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion"
+    />
+    <meta property="og:title" content="Paradise Pools Piscinas" />
+    <meta
+      property="og:description"
+      content="Construccion y Mantenimiento de Piscinas"
+    />
 
+    <!--Bootstrap-->
 
-
-     <!--Bootstrap-->
-  
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
 
     <!--font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
+      rel="stylesheet"
+    />
 
     <!--CSS-->
-    <link rel="stylesheet" href="./css/style.css">
-    
+    <link rel="stylesheet" href="./css/style.css" />
 
-    <title>SERVICIOS - Paradise Pools - Construimos la Piscina de tus sueños!</title>
-</head>
-<body>
-  <header class="header-cont">
-    <div class="logo-header">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools piscina"></div>
-    <nav class="navbar navbar-expand-lg bg-white">
-      <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link" href="index.html">Inicio</a>
-            <a class="nav-link" href="contacto.html">Contacto</a>
-            <a class="nav-link" href="nosotros.html">Nosotros</a>
-            <a class="nav-link" href="servicios.html">Servicios</a>
-            <a class="nav-link" href="trabajos.html">Trabajos</a>
-            <a class="nav-link disabled"></a>
+    <title>
+      SERVICIOS - Paradise Pools - Construimos la Piscina de tus sueños!
+    </title>
+  </head>
+
+  <body>
+    <header class="header-cont">
+      <div class="logo-header">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools piscina"
+        />
+      </div>
+      <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">Inicio</a>
+              <a class="nav-link" href="contacto.html">Contacto</a>
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+              <a class="nav-link" href="servicios.html">Servicios</a>
+              <a class="nav-link" href="trabajos.html">Trabajos</a>
+              <a class="nav-link disabled"></a>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <section class="servicios-cont">
+    <section class="servicios-cont">
       <h1>Nuestros Servicios</h1>
-      <p>Contratando a Paradise Pools te podes relajar! <br> Nos encargamos de todo para que vos y tu familia solo tengan que disfrutar de su nueva piscina!</p>
+      <p>
+        Contratando a Paradise Pools te podes relajar! <br />
+        Nos encargamos de todo para que vos y tu familia solo tengan que
+        disfrutar de su nueva piscina!
+      </p>
       <ul class="servicios-list">
         <li>- Nos encargamos de diseñar</li>
         <li>- Construimos por completo</li>
         <li>- Te brindamos el servicio de mantemiento</li>
       </ul>
-  </section>
-  <section class="d-flex justify-content-center">
-        <!--carousel de fotos mostrando servicios- bootstrap-->
-    <div id="carouselExampleIndicators" class="carousel slide w-75   " data-bs-ride="true">
-       <div class="carousel-indicators carousel-edit">
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-       </div>
-      <div class="carousel-inner">
-         <div class="carousel-item active">
-           <img src="multimedia/imagenes/construcción-de-piscinados.jpg" class="d-block w-100" alt="contruccion de piscinas">
+    </section>
+
+    <section class="d-flex justify-content-center">
+      <!--carousel de fotos mostrando servicios- bootstrap-->
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide w-75"
+        data-bs-ride="true"
+      >
+        <div class="carousel-indicators carousel-edit">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
         </div>
-        <div class="carousel-item">
-          <img src="multimedia/imagenes/mantenimiento2.jpg" class="d-block w-100" alt="mantenimiento de piscinas">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="multimedia/imagenes/construcción-de-piscinados.jpg"
+              class="d-block w-100"
+              alt="contruccion de piscinas"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="multimedia/imagenes/mantenimiento2.jpg"
+              class="d-block w-100"
+              alt="mantenimiento de piscinas"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="multimedia/imagenes/servicios12.png"
+              class="d-block w-100"
+              alt="decoracion de piscina"
+            />
+          </div>
         </div>
-        <div class="carousel-item">
-          <img src="multimedia/imagenes/servicios12.png" class="d-block w-100" alt="decoracion de piscina">
-        </div>
-     </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
-          </button>
-    </div>
-  </section>
-
-
+        </button>
+      </div>
+    </section>
 
     <footer class="footer-cont">
       <!--lado izquierdo-->
-   <div class="rrss-cont">
-     <ul class="rrss">
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="logo instagram"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="logo facebook"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"/></a>
-       </li>
-     </ul>
-   </div>
-   <!--en el centro-->
-   <div class="logo-footer">
-     <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools logo"/>
-   </div>
-   <!--lado derecho-->
-   <div class="derechos">
-     <p>Todos los derechos reservados</p>
-   </div>
- </footer>
+      <div class="rrss-cont">
+        <ul class="rrss">
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/Instagram-logo.png"
+                alt="logo instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/facebook-logo.png"
+                alt="logo facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <!--en el centro-->
+      <div class="logo-footer">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools logo"
+        />
+      </div>
+      <!--lado derecho-->
+      <div class="derechos">
+        <p>Todos los derechos reservados</p>
+      </div>
+    </footer>
 
-     <!-- JavaScript Bundle with Popper -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
