--- a/trabajos.html
+++ b/trabajos.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--SEO-->
-    <meta name="descrition" content="Conoce algunos de nuestros trabajos recientes. Inspirate para diseñar la piscina de tus sueños, nosotros la hacemos realidad!">
-    <meta name=" keywords" content="trabajos en piscinas, piletas, diseño de patios, diseño de piscinas, estilos de piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion">
-    <meta property="og:title"content="Paradise Pools Piscinas">
-    <meta property="og:description"content="Conoce algunos de nuestros trabajos realizados!">
-
+    <meta
+      name="descrition"
+      content="Conoce algunos de nuestros trabajos recientes. Inspirate para diseñar la piscina de tus sueños, nosotros la hacemos realidad!"
+    />
+    <meta
+      name=" keywords"
+      content="trabajos en piscinas, piletas, diseño de patios, diseño de piscinas, estilos de piletas, construccion, paisajismo, verano, patio, jardin, mantenimiento de piscinas, arquitectura, casas, nadar, agua, diseño, calor, club, hotel, recreacion"
+    />
+    <meta property="og:title" content="Paradise Pools Piscinas" />
+    <meta
+      property="og:description"
+      content="Conoce algunos de nuestros trabajos realizados!"
+    />
 
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
     <!--font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet">
-   
-    <!--CSS-->
-    <link rel="stylesheet" href="./css/style.css">
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>TRABAJOS REALIZADOS - Paradise Pools - Construimos la Piscina de tus sueños!</title>
-</head>
-<body>
-  <header class="header-cont">
-    <div class="logo-header">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools piscina"></div>
+    <!--CSS-->
+    <link rel="stylesheet" href="./css/style.css" />
+
+    <title>
+      TRABAJOS REALIZADOS - Paradise Pools - Construimos la Piscina de tus
+      sueños!
+    </title>
+  </head>
+
+  <body>
+    <header class="header-cont">
+      <div class="logo-header">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools piscina"
+        />
+      </div>
       <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -47,48 +78,107 @@
         </div>
       </nav>
     </header>
+
     <section class="trabajos-cont">
-        <h1>Trabajos Realizados</h1>
-        <p>Existen muchos estilos de piscinas. En Paradise Pools hacemos realidad el diseño que quieras! <br>
-        Te mostramos algunos de nuestros trabajos realizados recientemente.</p>
+      <h1>Trabajos Realizados</h1>
+      <p>
+        Existen muchos estilos de piscinas. En Paradise Pools hacemos realidad
+        el diseño que quieras! <br />
+        Te mostramos algunos de nuestros trabajos realizados recientemente.
+      </p>
     </section>
+
     <section class="trabajosimg-cont">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado1.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado2.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado3.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado4.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado5.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado6.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado7.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado8.jpg" alt="piscina">
-      <img class="trabajo-img" src="/multimedia/imagenes/trabajorealizado9.jpg" alt="piscina">
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado1.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado2.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado3.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado4.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado5.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado6.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado7.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado8.jpg"
+        alt="piscina"
+      />
+      <img
+        class="trabajo-img"
+        src="/multimedia/imagenes/trabajorealizado9.jpg"
+        alt="piscina"
+      />
     </section>
-
-
 
     <footer class="footer-cont">
       <!--lado izquierdo-->
-   <div class="rrss-cont">
-     <ul class="rrss">
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/Instagram-logo.png" alt="logo instagram"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/facebook-logo.png" alt="logo facebook"/></a>
-       </li>
-       <li><a href="redessociales.html"><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"/></a>
-       </li>
-     </ul>
-   </div>
-   <!--en el centro-->
-   <div class="logo-footer">
-      <img src="multimedia/imagenes/paradisepools-nlogo.png" alt="paradise pools logo"/>
-   </div>
-   <!--lado derecho-->
-   <div class="derechos">
-     <p>Todos los derechos reservados</p>
-   </div>
- </footer>
+      <div class="rrss-cont">
+        <ul class="rrss">
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/Instagram-logo.png"
+                alt="logo instagram"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img
+                src="multimedia/imagenes/facebook-logo.png"
+                alt="logo facebook"
+            /></a>
+          </li>
+          <li>
+            <a href="redessociales.html"
+              ><img src="multimedia/imagenes/wz-logo.png" alt="logo whatsapp"
+            /></a>
+          </li>
+        </ul>
+      </div>
+      <!--en el centro-->
+      <div class="logo-footer">
+        <img
+          src="multimedia/imagenes/paradisepools-nlogo.png"
+          alt="paradise pools logo"
+        />
+      </div>
+      <!--lado derecho-->
+      <div class="derechos">
+        <p>Todos los derechos reservados</p>
+      </div>
+    </footer>
 
-     <!-- JavaScript Bundle with Popper -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
